--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: Machine Learning Researcher
 url: https://adws2.github.io
 avatar: /adws2/assets/ruby.jpg
 paginate: 5
+paginate_path: "/study/page:num/"
 permalink: pretty
 cover_image: /bg.jpeg
 
