--- a/_data/archive.yml
+++ b/_data/archive.yml
@@ -1,12 +1,3 @@
-- type: dates
-  title: Dates
-  url: /dates/
-#- type: categories
-#  title: Categories
-#  url: /categories/
-# - type: tags
-#   title: Tags
-#   url: /tags/
 - type: study
   title: Study
   url: /study/
@@ -16,3 +7,12 @@
 - type: project
   title: Project
   url: /project/
+- type: dates
+  title: Dates
+  url: /dates/
+- type: categories
+ title: Categories
+ url: /categories/
+- type: tags
+  title: Tags
+  url: /tags/
