--- a/_data/archive.yml
+++ b/_data/archive.yml
@@ -7,12 +7,12 @@
 - type: project
   title: Project
   url: /project/
-- type: dates
-  title: Dates
-  url: /dates/
+# - type: dates
+#   title: Dates
+#   url: /dates/
 - type: categories
  title: Categories
  url: /categories/
-- type: tags
-  title: Tags
-  url: /tags/
+# - type: tags
+#   title: Tags
+#   url: /tags/
