--- a/_config.yml
+++ b/_config.yml
@@ -58,3 +58,8 @@ author:
   name: Songzi Vong
   url: https://github.com/vszhub/
   email: vszhub@gmail.com
+
+collections:
+  studies:
+    output: true
+    permalink: /adws2/:path
