--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ title: Min Jea Jung
 description: Machine Learning Researcher
 url: https://adws2.github.io
 avatar: /adws2/assets/ruby2.jpg
-paginate: 5
+paginate: 20
+paginate_path: "/study/page:num/"
 permalink: pretty
 cover_image: /adws2/assets/bg.jpg
 
