--- a/_data/archive.yml
+++ b/_data/archive.yml
@@ -16,9 +16,9 @@
 # - type: categories
 #   title: Categories
 #   url: /categories/
-# - type: tags
-#   title: Tags
-#   url: /tags/
+- type: tags
+  title: Tags
+  url: /tags/
 - type: visualization
   title: Visualization
   url: /visualization/
